--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,21 @@
 <html>
   <body>
-    <h1>Menu</h1>
-    <a [routerLink]="'/employee'">Employee Home</a>
-
-    <router-outlet></router-outlet>
+    <div class="container-fluid container-fluid-body">
+      <div class="app-wrapper">
+        <div class="header">
+          <app-header></app-header>
+        </div>
+        <div class="body">
+          <div class="wrapper">
+            <div class="side-navigation">
+              <app-side-navigation></app-side-navigation>
+            </div>
+            <div class="main-content">
+              <router-outlet></router-outlet>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
