--- a/src/app/modules/components/employee/employee-home/employee-home.component.html
+++ b/src/app/modules/components/employee/employee-home/employee-home.component.html
@@ -1,10 +1,9 @@
 <div style="padding-top: 10px; padding-left: 15px;">
     <label style="padding-bottom: 10px;">
-        <a [routerLink]="'/'">Back to Main</a>
+        <a [routerLink]="'/'">Back to home page</a>
     </label>
     <div style="padding-top: 10px;">
-
+        <!-- <i class="ico-arrow-left"></i> -->
         <a [routerLink]="'/employee/all'">Employee list</a>
-        <!-- <router-outlet></router-outlet> -->
     </div>
 </div>
