--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,52 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
+
+.container-fluid-body {
+    padding: 0 !important;
+}
+
+.app-wrapper {
+    width: 100%;
+    height: 100%;
+    background-color: #F5F5F5;
+
+    .header {
+        height: 50px;
+        background-color: #FFFFFF;
+        box-shadow: 0 2px 6px #0000001a;
+    }
+
+    .body {
+        height: calc(100vh - 50px);
+
+        .wrapper {
+            display: flex !important;
+            padding: 15px;
+
+            .side-navigation {
+                transition: margin .25s ease-out;
+                position: relative;
+                width: 13.5rem;
+
+                ul li {
+                    padding-left: 5px;
+
+                    &.active {
+                        background-color: #dddd;
+                        border-radius: 10px 0 0 10px
+                    }
+                }
+            }
+    
+            .main-content {
+                width: 100%;
+                height: calc(100vh - 80px);
+                background-color: #FFFFFF;
+                border: 1px #E3E3E3 solid;
+                border-radius: 10px;
+            }
+        }
+    }
+}
