--- a/src/app/shared/modules/component/side-navigation/side-navigation.component.html
+++ b/src/app/shared/modules/component/side-navigation/side-navigation.component.html
@@ -1,4 +1,4 @@
-<!-- <ul ngbNav #nav="ngbNav" class="nav-pills" orientation="vertical" style="padding-right: 5px;">
+<ul ngbNav #nav="ngbNav" class="nav-pills" orientation="vertical" style="padding-right: 5px;">
     <ng-container *ngFor="let item of menuItems">
         <ng-container *ngIf="!item.children">
             <li ngbNavItem="top" [ngClass]="{'active': item.isActive}">
@@ -20,9 +20,9 @@
             </div>
         </div>
     </ng-container>
-</ul> -->
+</ul>
 
-<div [ngTemplateOutlet]="menuItemsTemp" [ngTemplateOutletContext]="{items: menuItems}"></div>
+<!-- <div [ngTemplateOutlet]="menuItemsTemp" [ngTemplateOutletContext]="{items: menuItems}"></div>
 
 <ng-template #menuItemsTemp let-items="items" let-isChild="isChild">
     <ul ngbNav #nav="ngbNav" class="nav-pills" orientation="vertical" style="padding-right: 5px;">
@@ -42,4 +42,4 @@
             </div>
         </ng-container>
     </ul>
-</ng-template>
+</ng-template> -->
