Added lazy loading, guards, fake auth service and login module

--- a/src/app/shared/modules/component/header/header/header.component.html
+++ b/src/app/shared/modules/component/header/header/header.component.html
@@ -7,7 +7,7 @@
         </div>
         <div class="col-11">
             <div class="header-right">
-
+                <a (click)="onLogout()" *ngIf="authService.isAuthenticated" class="logout-button">Logout</a>
             </div>
         </div>
     </div>
