Added pipes, custom pipe, dashboard service

--- a/src/app/modules/components/dashboard/dashboard.component.html
+++ b/src/app/modules/components/dashboard/dashboard.component.html
@@ -1,1 +1,6 @@
 <p>dashboard works!</p>
+
+<label *ngFor="let empStat of empStats">{{empStat}}</label>
+<!-- <label *ngFor="let empStat of empStats$ | async">{{empStat}}</label> -->
+<br />
+<button (click)="addEmp()">Add emp</button>
