Added employee.service, make use of sample rest API, updated modules

--- a/src/app/modules/components/employee/employee-list/employee-list.component.html
+++ b/src/app/modules/components/employee/employee-list/employee-list.component.html
@@ -3,9 +3,12 @@
     <div *ngFor="let employee of employees">
         <label>
             <a [routerLink]="'/employee/details/' + employee.id">{{employee.name}}</a>
+            <button (click)="onDeleteEmployee(employee.id)">Delete</button>
         </label>
         <!-- <label (click)="gotoDetail(employee.id)">
             {{employee.name}}
         </label> -->
     </div>
+
+    <button (click)="onCreateEmployee()">Create</button>
 </div>
