Added interceptor, ngx-loading-bar, firebase config

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,10 @@
       <div class="app-wrapper">
         <div class="header">
           <app-header></app-header>
+          <ngx-loading-bar></ngx-loading-bar>
+          <!-- <button (click)="startLoading()">start</button>
+          <button (click)="stopLoading()">stop</button> -->
+
         </div>
         <div class="body">
           <div class="wrapper">
