--- a/src/app/modules/components/login/login.component.html
+++ b/src/app/modules/components/login/login.component.html
@@ -15,7 +15,7 @@
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-3">
-                                <label>Username: </label>
+                                <label>User: </label>
                             </div>
                             <div class="col-9">
                                 <input type="text" id="username" class="username" formControlName="username"/>
