--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
         </div>
         <div class="body">
           <div class="wrapper">
-            <div class="side-navigation">
+            <div class="side-navigation" *ngIf="isAuthenticated">
               <app-side-navigation></app-side-navigation>
             </div>
             <div class="main-content">
